--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,13 @@
 services:
   filebrowser:
-    image: 'gtstef/filebrowser'
-    container_name: filebrowser
+    image: gtstef/filebrowser
     restart: unless-stopped
-     environment:
-           - FB_ROOT=/srv/root                  # start Filebrowser at server root
+    environment:
+      - FILEBROWSER_ROOT=/srv/root                  # start Filebrowser at server root
       - FILEBROWSER_CONFIG
       - FILEBROWSER_ADMIN_PASSWORD
       #      FILEBROWSER_CONFIG: "./data/config.yaml" -> add to coolify environment variables.
-#      FILEBROWSER_ADMIN_PASSWORD: admin -> add to coolify environment variables.
-
+      #      FILEBROWSER_ADMIN_PASSWORD: admin -> add to coolify environment variables.
     volumes:
       - /:/srv/root                        # entire host filesystem
       - ./data:/database                   # Filebrowser stores its DB here
- 
